# multiplayer-fps

./: Cargo.toml
src/: custom_events.rs  game.rs  main.rs  network.rs  objects.rs  player.rs  reader.rs  session.rs
static/models/: wall.mtl
